--- a/web/src/main/webapp/newterminal.html
+++ b/web/src/main/webapp/newterminal.html
@@ -17,7 +17,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
             
             <div class="containerScreens">
                 <div id="cardNumber">
-                    <div id="cardnumber">
+                    <div id="cardnumber" class="d-inline-flex p-2 bd-highlight">
                         <input type="number" class="form-control" id="floatingInput" placeholder="Card number" oninput="if( this.value.length > 16 )  this.value = this.value.slice(0,16)">
 
                     </div>
